--- a/index.html
+++ b/index.html
@@ -153,91 +153,91 @@
         <h1>I Piloti che aderiscono all'iniziativa</h1>
         <div class="container">
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/bisignano-stefano.jpeg" alt="Foto di Bisignano Stefano" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/stefanobisignano.jpg" alt="Foto di Bisignano Stefano" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Bisignano Stefano</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru">T/VP/RU</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-gt351">>351</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-21-30">21-30</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/cipolla-davide.jpeg" alt="Foto di Cipolla Davide" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/cipolladavide.jpeg" alt="Foto di Cipolla Davide" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Cipolla Davide</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr-mep">T/VP/RU, N/VFR, MEP</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-251-300">251/300</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-11-20">11-20</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/oliani-pietro.jpg" alt="Foto di Oliani Pietro" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/olianipietro.jpg" alt="Foto di Oliani Pietro" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Oliani Pietro</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-cpl">CPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr-ir-mep">T/VP/RU, N/VFR, IR, MEP</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-101-150">101/150</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/mario-enzo.jpeg" alt="Foto di Mario Enzo" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/marioenzo.jpeg" alt="Foto di Mario Enzo" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Mario Enzo</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr">T/VP/RU, N/VFR</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-301-350">301/350</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-21-30">21-30</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/lugarini-moreno.jpg" alt="Foto di Lugarini Moreno" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/lugarinimoreno.jpg" alt="Foto di Lugarini Moreno" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Lugarini Moreno</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-40-100">40/100</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-21-30">21-30</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/maruelli-alioscia.jpg" alt="Foto di Maruelli Alioscia" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/maruellialioscia.jpg" alt="Foto di Maruelli Alioscia" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Maruelli Alioscia</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-nvfr">N/VFR</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-40-100">40/100</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-0-10">0-10</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/turra-federico.jpg" alt="Foto di Turra Federico Jaroslav" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/turrafederico.jpg" alt="Foto di Turra Federico Jaroslav" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Turra Federico Jaroslav</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr">T/VP/RU, N/VFR</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-gt351">>351</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/moglia-andrea.jpeg" alt="Foto di Andrea Moglia" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/mogliandrea.jpeg" alt="Foto di Andrea Moglia" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Andrea Moglia</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru">T/VP/RU</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-151-200">151/200</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-0-10">0-10</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/delfini-patrik.jpeg" alt="Foto di Patrik Delfini" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/delfinipatrik.jpeg" alt="Foto di Patrik Delfini" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Patrik Delfini</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-251-300">251/300</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-11-20">11-20</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/ballini-giulio.jpg" alt="Foto di Ballini Giulio" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/ballinigiulio.jpg" alt="Foto di Ballini Giulio" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Ballini Giulio</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru">T/VP/RU</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-gt351">>351</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/caiola-federico.jpeg" alt="Foto di Caiola Federico" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/caiolafederico.jpeg" alt="Foto di Caiola Federico" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Caiola Federico</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-40-100">40/100</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/caponi-riccardo.jpg" alt="Foto di Caponi Riccardo" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/caponiriccardo.jpg" alt="Foto di Caponi Riccardo" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Caponi Riccardo</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-201-250">201/250</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-11-20">11-20</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/ciampalini-giulio.jpeg" alt="Foto di Ciampalini Giulio" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/ciampalinigiulio.jpeg" alt="Foto di Ciampalini Giulio" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Ciampalini Giulio</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-atpl">ATPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr-ir-mep">T/VP/RU, N/VFR, IR, MEP</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-251-300">251/300</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-21-30">21-30</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/piccoli-michele.jpg" alt="Foto di Piccoli Michele" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/piccolimichele.jpg" alt="Foto di Piccoli Michele" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Piccoli Michele</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-40-100">40/100</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-0-10">0-10</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/assandri-claudio.jpeg" alt="Foto di Claudio Assandri" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/assandriclaudio.jpeg" alt="Foto di Claudio Assandri" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Claudio Assandri</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-40-100">40/100</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-11-20">11-20</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/onofrio-gianluigi.jpg" alt="Foto di Onofrio Gianluigi" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/onofriogianluigi.jpg" alt="Foto di Onofrio Gianluigi" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Onofrio Gianluigi</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-201-250">201/250</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-0-10">0-10</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/piscitelli-roberto.jpeg" alt="Foto di Piscitelli Roberto" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/piscitelliroberto.jpeg" alt="Foto di Piscitelli Roberto" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Piscitelli Roberto</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr-mep">T/VP/RU, N/VFR, MEP</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-301-350">301/350</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-21-30">21-30</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/bellicini-edoardo.jpeg" alt="Foto di Bellicini Edoardo" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/belliciniedoardo.jpeg" alt="Foto di Bellicini Edoardo" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Bellicini Edoardo</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-40-100">40/100</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-11-20">11-20</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/facconi-federico.png" alt="Foto di Facconi Federico" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/facconifederico.png" alt="Foto di Facconi Federico" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Facconi Federico</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr">T/VP/RU, N/VFR</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-101-150">101/150</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-11-20">11-20</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/petrarca-marco.jpg" alt="Foto di Petrarca Marco" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/petrcamarco.jpg" alt="Foto di Petrarca Marco" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Petrarca Marco</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-101-150">101/150</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/denobili-cristiano.jpeg" alt="Foto di De Nobili Cristiano" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/denobilicristiano.jpeg" alt="Foto di De Nobili Cristiano" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">De Nobili Cristiano</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-gt351">>351</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/valetti-lucio.jpeg" alt="Foto di Valetti Lucio" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/valettilucio.jpeg" alt="Foto di Valetti Lucio" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Valetti Lucio</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-mep">MEP</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-151-200">151/200</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-0-10">0-10</td></tr></table></div>
             </div>
         </div>
