--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
                 <div class="pilot-info"><h2 class="pilot-name">Ballini Giulio</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru">T/VP/RU</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-gt351">>351</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/caiolafederico.jpeg" alt="Foto di Caiola Federico" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/WhatsApp%20Image%202025-08-28%20at%2011.23.18(1).jpeg" alt="Foto di Caiola Federico" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Caiola Federico</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-40-100">40/100</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/caponiriccardo.jpg" alt="Foto di Caponi Riccardo" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/20250430_094152%20-%20Riccardo%20Caponi.jpg" alt="Foto di Caponi Riccardo" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Caponi Riccardo</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuna</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-201-250">201/250</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-11-20">11-20</td></tr></table></div>
             </div>
             <div class="pilot-card">
