--- a/piloti.html
+++ b/piloti.html
@@ -48,11 +48,11 @@
                 <div class="pilot-info"><h2 class="pilot-name">Oliani Pietro</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-cpl">CPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr-ir-mep">T/VP/RU, N/VFR, IR, MEP</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-101-150">101/150</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-gt31">>31</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/mario.jpg" alt="Foto di Mario Enzo" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/mario.jpg" alt="Foto di MARIO ENZO" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">MARIO ENZO</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr">T/VP/RU, N/VFR</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-301-350">301/350</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-21-30">21-30</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/lugarini1.jpeg" alt="Foto di Lugarini Moreno" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/lugarini.jpeg" alt="Foto di Lugarini Moreno" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Lugarini Moreno</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuno</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-40-100">40/100</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-21-30">21-30</td></tr></table></div>
             </div>
             <div class="pilot-card">
@@ -100,7 +100,7 @@
                 <div class="pilot-info"><h2 class="pilot-name">Onofrio Gianluigi</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-none">Nessuno</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-201-250">201/250</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-0-10">0-10</td></tr></table></div>
             </div>
             <div class="pilot-card">
-                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/piscitelli1.jpeg" alt="Foto di Piscitelli Roberto" class="pilot-photo"></div>
+                <div class="pilot-photo-container"><img src="https://raw.githubusercontent.com/avvbisignano/piloti/main/piscitelli2.jpeg" alt="Foto di Piscitelli Roberto" class="pilot-photo"></div>
                 <div class="pilot-info"><h2 class="pilot-name">Piscitelli Roberto</h2><table class="details-table"><tr><td>Licenza:</td><td class="value-cell lic-ppl">PPL(A)</td></tr><tr><td>Rating:</td><td class="value-cell rating-tvpru-nvfr-mep">T/VP/RU, N/VFR, MEP</td></tr><tr><td>Ore totali:</td><td class="value-cell h-total-301-350">301/350</td></tr><tr><td>Ore 12 mesi:</td><td class="value-cell h-12m-21-30">21-30</td></tr></table></div>
             </div>
             <div class="pilot-card">
@@ -128,7 +128,7 @@
     <footer>
         <div class="footer-content">
             <p>Il flight sharing (volo in condivisione dei costi) è un’attività pienamente riconosciuta nell'Unione Europea secondo il Regolamento Europeo (UE) n. 965/2012.</p>
-            <p>L’EASA (European Union Aviation Safety Agency), al fine di promuovere la sicurezza dei voli non commerciali, ha redatto una Carta che stabilisce una serie di impegni per i piloti che effettuano voli a costi ripartiti e che l’Aero Club Brescia sottoscrive totalmente.</p>
+            <p>L’EASA (European Union Aviation Safety Agency), al fine di promuovere la sicurezza dei voli non commerciali, ha redatto una serie di impegni per i piloti che effettuano voli a costi ripartiti e che l’Aero Club Brescia sottoscrive totalmente.</p>
         </div>
     </footer>
 </body>
